Tue Jun  4 01:33:31 BST 2002  Colin Watson  <cjwatson@debian.org>

	* Version: 2.3.90 (for translators).
	* docs/NEWS: More updates.
	* po/cs.po, po/da.po, po/de.po, po/es.po, po/fr.po, po/it.po,
	  po/ja.po: Update with msgmerge.

Tue May 28 00:36:55 BST 2002  Colin Watson  <cjwatson@debian.org>

	* libdb/db_lookup.c (dblookup): Check the MATCH_CASE flag in the
	  case of a single entry as well as multiple entries.

Mon May 27 23:57:26 BST 2002  Colin Watson  <cjwatson@debian.org>

	* lib/hashtable.c, lib/hashtable.h: New files, containing the
	  generic parts of src/hashtable.{c,h}.
	* lib/Makefile.in: Add hashtable.c.
	* src/hashtable.c (hash, lookup, install): Remove. These functions
	  have been renamed and moved to lib/hashtable.c.
	  (free_defn): Rename to man_hash_free and update for new hashtable
	  API.
	  (free_hashtab): Update for new hashtable API.
	* src/hashtable.h: Update prototypes.

	* libdb/db_btree.c (btree_findkey): Check for entries we've seen
	  before in the current run. These indicate a corrupt database
	  containing a loop.

Thu May 23 01:50:53 BST 2002  Colin Watson  <cjwatson@debian.org>

	* lib/cleanup.h: #endif must not be followed by a token on the same
	  line.

Thu May 23 00:29:24 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/fake_security.c (get_man_owner): New fake function to match
	  the real one in src/security.c.
	* src/manp.c (mkcatdirs): Chown newly created cat directories to the
	  MAN_OWNER when running as root.

	* .cvsignore, intl/.cvsignore, po/.cvsignore: Ignore a few more
	  files.
	* src/man_db.conf.in: Correct the heading.

Wed May 22 00:06:18 BST 2002  Colin Watson  <cjwatson@debian.org>

	* libdb/db_store.c (compare_ids): New function, replacing the
	  FAVOUR() macro. Without this, the last-but-one commit won't
	  compile ...
	  (replace_if_necessary): Use it.
	* libdb/db_storage.h: Prototype it.

Mon May 20 03:07:24 BST 2002  Colin Watson  <cjwatson@debian.org>
